[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
iroh = { version = "0.34.1", default-features = false, features = ["discovery-local-network"]}
iroh-gossip = "0.34.1"
n0-future = "0.1.2"
silent-threshold-encryption = { git = "https://github.com/guruvamsi-policharla/silent-threshold-encryption.git", default-features = false }
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
rand = "0.9.1"
ark-bls12-381 = "0.5.0"
rand_core = "0.9.3"
postcard = "1.1.1"
clap = { version = "4.5.37", default-features = false, features = ["derive"] }
tokio = "1.44.2"
tarpc = "0.36.0"
