[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
iroh = { version = "0.34.1", default-features = false, features = [
    "discovery-local-network",
] }
iroh-gossip = {version = "0.34.1", features = ["rpc"]}
n0-future = "0.1.2"
# silent-threshold-encryption = { git = "https://github.com/guruvamsi-policharla/silent-threshold-encryption.git", default-features = false }
silent-threshold-encryption = { path = "../silent-threshold-encryption", default-features = false}
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
rand = "0.9.1"
ark-bls12-381 = "0.5.0"
rand_core = "0.9.3"
postcard = "1.1.1"
clap = { version = "4.5.37", default-features = false, features = ["derive"] }
tokio = "1.44.2"
tarpc = { version = "0.36.0", default-features = false, features = ["full"] }
tokio-serde = "0.9.0"
futures = "0.3.31"
axum = "0.8.4"
tonic = "0.13.0"
prost = "0.13.5"
serde = "1.0.219"
tonic-reflection = "0.13.0"
ark-serialize = "0.5.0"
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
    "derive",
] }
hex = "0.4.3"
bytes = "1.10.1"
iroh-docs = { version = "0.34.0", features = ["rpc"] }
iroh-blobs = "0.34.1"
quic-rpc = "0.19.0"
flume = "0.11.1"

[build-dependencies]
tonic-build = "0.13.0"
